# income-prediction-api

./: .gitignore  .pre-commit-config.yaml  README.md  conda.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: MLProject  conda.yml  upload_data.py
income-prediction-api/: train_model.py
income-prediction-api/ml/: data.py
